--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
+	// testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
