Connect to a virtual PostgreSQL database server using Docker container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=runnerz
 server.port = 8085
-spring.datasource.generate-unique-name=false
-spring.datasource.name=runnerz
 
+### Using h2 in-memory database
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=runnerz
+
+### Using PostgreSQL in local machine (download and run the database)
+#spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
+#spring.datasource.username=
+#spring.datasource.password=
+
+spring.sql.init.mode=always
